# Proiectele

./: README.md
Concerte/: artisti.json  asda  concerte.json  main.py
Concerte/Domain/: artist.py  artist_validator.py  concert.py  concert_validator.py
Concerte/Repository/: json_repository.py  repository.py
Concerte/Service/: artistService.py  concertService.py
Concerte/UserInterface/: console.py
Gestionarea afacerii familiei(Magazin)/: main.py  produs.json
Gestionarea afacerii familiei(Magazin)/Domain/: Produs.py  ProdusValidator.py
Gestionarea afacerii familiei(Magazin)/Repository/: json_repository.py
Gestionarea afacerii familiei(Magazin)/Service/: produsService.py
Gestionarea afacerii familiei(Magazin)/UI/: console.py
Java OOP Social media/src/: Main.java
Java OOP Social media/src/Validators/: UserValidator.java
Java OOP Social media/src/domain/: Friendship.java  User.java
Java OOP Social media/src/repository/: RepoFriendship.java  RepoUser.java
Laborator9/: CMakeLists.txt  main.cpp
Laborator9/Domain/: Product.cpp  Product.h
Laborator9/Repository/: Repository.h  RepositoryFile.h  RepositoryInMemory.h
Laborator9/Service/: Service.h
Laborator9/Tests/: Tests.cpp  Tests.h
Laborator9/UserInterface/: UserInterface.cpp  UserInterface.h
Vanzari de carti/: README.md  main.py
Vanzari de carti/Domain/: vanzare.py
Vanzari de carti/Logic/: CRUD.py  Functionalitati.py
Vanzari de carti/Teste/: TestAll.py  TestCRUD.py  Test_Domain.py  teste_fuctionalitati.py
Vanzari de carti/UI/: Console.py
Vanzari de carti/Validator/: validatori.py
(+22 files in other folders)
